# exam-autograder

./: .gitignore  README.md  auto_grade.py  autograde_sql.py  conf.example.py  grades.p  pyproject.toml
