[tool.poetry]
name = "autograde"
version = "0.1.0"
description = ""
authors = ["Cédric Donner <cedonner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gql = {extras = ["requests"], version = "^3.4.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
